--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                </div>
                <br/>
            </div>
-           <!-- Résumé -->
+           <!-- Resume -->
            <div id="resume"><div class="inner">
                <p class="tagline">Resume</p>
-               <!-- Résumé : Education -->
+               <!-- Resume : Education -->
                <p class="section-tagline" style="text-align:left;">Education</p>
-               <!-- Résumé : Education : USC -->
+               <!-- Resume : Education : Ellensburg -->
                <p>
                    <a target="_blank" href="https://www.cwu.edu/"><img class="icon" src="cwu.png"></a><b>Central Washington Univeristy</b>
                    <span class="right"><i>2018 - 2022</i></span><br/><b>Computer Science, B.S.</b>
@@ -108,7 +108,7 @@
                    <span class="skill">C/C++</span><span class="skill">Java</span><span class="skill">JavaScript(React.js)</span><span class="skill">Python</span><span class="skill">Agile Development</span><span class="skill">Scrum Project Management</span><span class="skill">Excel/Sheets</span>
                </p>
                <br/>
-               <!-- Résumé : Education : Sorbonne -->
+               <!-- Resume : Education -->
                <p>
                    <a target="_blank" href="https://www.yearup.org/"><img class="icon" src="yearup.png"></a><b>YearUp(Bellevue College)</b>
                    <span class="right"><i>Spring 2018</i></span><br/>
@@ -120,10 +120,10 @@
        
                <br/><br/>
 
-               <!-- Résumé : Work Experience -->
+               <!-- Resume : Work Experience -->
                <p class="section-tagline" style="text-align:left;">Work Experience</p>
 
-               <!-- Résumé : Work Experience : Revature -->
+               <!-- Resume : Work Experience : Revature -->
                <p>
                    <a target="_blank" href="https://revature.com/?utm_source=google&utm_medium=cpc&utm_campaign=revatureb2c_tech_brand_x_google_sr_brand_all_all&utm_adgroup=Revature_Brand&utm_term=revature&matchtype=b&network=g&device=c&devicemodel=&creative=587695441382&placement=&target=&adposition=&feeditemid=&adgroup_id=37777646047&target_id=aud-790287833882:kwd-329245550613&gclid=CjwKCAjwrfCRBhAXEiwAnkmKmQE2IvZ7qTDsLAXiNEDXyLAApcpEeRKDlCPyS1dc2S-It5dmY0fj5hoCtsQQAvD_BwE"><img class="icon" src="revature.png"></a><b>Revature</b>
                    <span class="right"><i>Summer 2021</i></span><br/>
@@ -134,7 +134,7 @@
                    <span class="skill">HTML</span><span class="skill">SASS/CSS</span><span class="skill">React.JS</span><span class="skill">PHP</span><span class="skill">WordPress</span><span class="skill">Git</span><span class="skill design">Illustrator</span><span class="skill design">Photoshop</span>
                </p>
                <br/>
-               <!-- Résumé : Work Experience : Roski -->
+               <!-- Résumé : Work Experience : Microsoft -->
                <p>
                    <a target="_blank" href="https://www.microsoft.com/en-us/legal/intellectualproperty/trademarks"><img class="icon" src="soft.jpeg"></a><b>Microsoft</b>
                    <span class="right"><i>March 2019 - October 2019</i></span><br/>
@@ -157,7 +157,7 @@
                <p class="tagline">Work + Fun</p>
        
                <div class="portfolio-thumb portfolio-big">
-                   <a class="image-popup-no-margins"><img src="Hackathon.jpeg"></a>
+                   <a class="image-popup-no-margins"><img src="FoodReview.png"></a>
                    <p class="description"><b>CWU Restraunts</b>&nbsp;&nbsp; A project for my personal interest was inspired by my collective frustration with finding campus restaurants. I want to create a tool for students to locate restrurants available on campus and ultimately make plans for the future with all interactions between students. This will be a simple website where users can keep a list of available restraunts and their locations. While also allowing users to do things they want to do along with friends who share common interests. I expect further progress to take place in the near future on the app especially considering my interest in the simplicity of its humble feature set, and its potential to encourage communication and activity. Working as a designer and developer. Currently in development.
 
 </p>
