--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <head>
-   <title>Abdiasis Abdi</title>
+   <title>Personal Website</title>
          <meta charset="UTF-8">
        <meta name="description" content="Personal Website">
        <meta name="keywords" content="Abdiasis Abdi" />
