--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@
                    <span class="right"><i>Summer 2021</i></span><br/>
                    <b>Front-end Web Developer</b>
                    <span class="right"><i>Yakima, WA</i></span><br/><br/>
-                       Joined a team of product and software engineers within IDEO to 
-                   design, prototype, build and ship digital products. Worked as both a designer and developer on a variety of internal and client projects.<br/><br/>
+                    <li>As a front-end web developer my work included the design, implementation, testing, and optimization of websites </li>
+                    <li>Improved the end-to-end experience of Revature by conducting usability reviews, identifying UX issues, and proposing design recommendations</li>
+                    <li>Ensured platform-wide consistency through documentation of user cases and UI elements</li>
+                   <br/><br/>
                    <span class="skill">HTML</span><span class="skill">SASS/CSS</span><span class="skill">React.JS</span><span class="skill">PHP</span><span class="skill">WordPress</span><span class="skill">Git</span><span class="skill design">Illustrator</span><span class="skill design">Photoshop</span>
                </p>
                <br/>
@@ -180,7 +182,7 @@
                    </div>
                    <div class="portfolio-thumb">
                     <a class="image-popup-no-margins" ><img src="illustration.png"></a>
-                    <p class="description"><b>Illustrations</b>&nbsp;&nbsp; I like to draw things I like. My Schwinn ride pictured above.</p>
+                    <p class="description"><b>Illustrations</b>&nbsp;&nbsp; I like to draw and creating art and products during my free time</p>
                 </div>
                </div>
                <div class="portfolio-thumb portfolio-big">
