--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
            <div  id ="footer"><div class="inner">
                © 2022 Abdiasis Abdi. 
                <span class="right">
-                   <a target="_blank" href="abdiasisabdi12@gmail.com">Email</a>&nbsp;//&nbsp;
+                   <a target="_blank" href="mailto:abdiasisabdi12@gmail.com">Email</a>&nbsp;//&nbsp;
                    <a target="_blank" href="nkedin.com/in/abdiasis-abdi-a7865612a/">LinkedIn</a>&nbsp;//&nbsp;
                </span>
            </div></div>
