--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                            &gt; Abdiasis.resume<br/>
                            <span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="Resume.pdf">resume.pdf</a>"<br/><br/></span>
                            &gt; Abdiasis.email<br/>
-                           <span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="abdiasisabdi12@gmail.com">abdiasisabdi12@gmail.com</a>"<br/><br/></span>
+                           <span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="mailto:abdiasisabdi12@gmail.com">abdiasisabdi12@gmail.com</a>"<br/><br/></span>
                        </div>
                    </div>
                </div>
