--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                <!-- Resume : Work Experience : Revature -->
                <p>
-                   <a target="_blank" href="https://revature.com/?utm_source=google&utm_medium=cpc&utm_campaign=revatureb2c_tech_brand_x_google_sr_brand_all_all&utm_adgroup=Revature_Brand&utm_term=revature&matchtype=b&network=g&device=c&devicemodel=&creative=587695441382&placement=&target=&adposition=&feeditemid=&adgroup_id=37777646047&target_id=aud-790287833882:kwd-329245550613&gclid=CjwKCAjwrfCRBhAXEiwAnkmKmQE2IvZ7qTDsLAXiNEDXyLAApcpEeRKDlCPyS1dc2S-It5dmY0fj5hoCtsQQAvD_BwE"><img class="icon" src="revature.png"></a><b>Revature</b>
+                   <a target="_blank" href="https://revature.com/?utm_source=google&utm_medium=cpc&utm_campaign=revatureb2c_tech_brand_x_google_sr_brand_all_all&utm_adgroup=Revature_Brand&utm_term=revature&matchtype=b&network=g&device=c&devicemodel=&creative=587695441382&placement=&target=&adposition=&feeditemid=&adgroup_id=37777646047&target_id=aud-790287833882:kwd-329245550613&gclid=CjwKCAjwrfCRBhAXEiwAnkmKmQE2IvZ7qTDsLAXiNEDXyLAApcpEeRKDlCPyS1dc2S-It5dmY0fj5hoCtsQQAvD_BwE"><img class="icon" src="revature.png"></a><b>EDMO inc</b>
                    <span class="right"><i>Summer 2021</i></span><br/>
                    <b>Front-end Web Developer</b>
                    <span class="right"><i>Yakima, WA</i></span><br/><br/>
@@ -139,7 +139,7 @@
                <!-- Résumé : Work Experience : Microsoft -->
                <p>
                    <a target="_blank" href="https://www.microsoft.com/en-us/legal/intellectualproperty/trademarks"><img class="icon" src="soft.jpeg"></a><b>Microsoft</b>
-                   <span class="right"><i>March 2019 - October 2019</i></span><br/>
+                   <span class="right"><i>March 2019 - September 2019</i></span><br/>
                    <b>Engineering Program Managers Intern</b>
                    <span class="right"><i>Issaquah, WA</i></span><br/><br/>
                        <li>Rebuilt a Quality Control product with input from 20 cross-functional stakeholders, saving $1M annually</li>
