--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                            <span class="answer">&nbsp;&nbsp;=&gt; ["Design", "Code", "brunch", "typography", "music", "bicycles", "Soccer"]<br/><br/></span>
                            &gt; Abdiasis.workExperience.latest<br/>
                            <span class="answer">&nbsp;&nbsp;=&gt; Latest Work Experience<br/>
-                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; company: "Revature"<br/>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; company: "EDMO inc."<br/>
                                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; role: "Front-end Developer"<br/>
                                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; startDate: "June 2021"<br/>
                                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; endDate: "August 2011"<br/>
@@ -125,7 +125,7 @@
 
                <!-- Resume : Work Experience : Revature -->
                <p>
-                   <a target="_blank" href="https://revature.com/?utm_source=google&utm_medium=cpc&utm_campaign=revatureb2c_tech_brand_x_google_sr_brand_all_all&utm_adgroup=Revature_Brand&utm_term=revature&matchtype=b&network=g&device=c&devicemodel=&creative=587695441382&placement=&target=&adposition=&feeditemid=&adgroup_id=37777646047&target_id=aud-790287833882:kwd-329245550613&gclid=CjwKCAjwrfCRBhAXEiwAnkmKmQE2IvZ7qTDsLAXiNEDXyLAApcpEeRKDlCPyS1dc2S-It5dmY0fj5hoCtsQQAvD_BwE"><img class="icon" src="revature.png"></a><b>EDMO inc</b>
+                   <a target="_blank" href="https://www.edmo.com/"><img class="icon" src="Edmo.jpeg"></a><b>EDMO inc</b>
                    <span class="right"><i>Summer 2021</i></span><br/>
                    <b>Front-end Web Developer</b>
                    <span class="right"><i>Yakima, WA</i></span><br/><br/>
