--- a/index.html
+++ b/index.html
@@ -165,24 +165,24 @@
 </p>
                </div>
                <div class="row">
-                   <div class="portfolio-thumb">
-                       <a class="image-popup-no-margins" href="img/portfolio/bike2.png"><img src="TA.png"></a>
-                       <p class="description"><b>Teachers Assistant Sorting Algorithm</b>&nbsp;&nbsp;Our senior software design capstone project was driven by students common dissatisfaction with the way the Teachers Assistance were chosen.  We want to create a tool for the student to be able to have a fair and just chance of being selected for TA role based on requirements such as graduation year, courses taken and availability. </p>
-                   </div>
+                <div class="portfolio-thumb">
+                    <a class="image-popup-no-margins" ></a><img src="https://images.unsplash.com/photo-1648169747806-6e63fe012439?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Mnx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60"></a>
+                    <p class="description"><b>Internship</b>&nbsp;&nbsp; Internship Team 
+                    </p>
+                </div>
                    <div class="portfolio-thumb">
                        <a class="image-popup-no-margins"><img src="IMG_6444.jpg"></a>
                        <p class="description"><b>Hackathon TEAM HR BOT</b>&nbsp;&nbsp; I got the oppurtunity to showcase and sharpen my coding skills at the worlds biggest hackaton event at Microsoft. Not only was it a ton for fun but it was a surreal experience.</p>
                    </div>
                </div>						
                <div class="row">
+                <div class="portfolio-thumb">
+                    <a class="image-popup-no-margins"><img src="TA.png"></a>
+                    <p class="description"><b>Teachers Assistant Sorting Algorithm</b>&nbsp;&nbsp;Our senior software design capstone project was driven by students common dissatisfaction with the way the Teachers Assistance were chosen.  We want to create a tool for the student to be able to have a fair and just chance of being selected for TA role based on requirements such as graduation year, courses taken and availability. </p>
+                </div>
                    <div class="portfolio-thumb">
-                       <a class="image-popup-no-margins" href="Resume.pdf"><img src="res.jpeg"></a>
-                       <p class="description"><b>Resume</b>&nbsp;&nbsp; Cick to access my Resume
-                       </p>
-                   </div>
-                   <div class="portfolio-thumb">
-                    <a class="image-popup-no-margins" ><img src="illustration.png"></a>
-                    <p class="description"><b>Illustrations</b>&nbsp;&nbsp; I like to draw and creating art and products during my free time</p>
+                    <a class="image-popup-no-margins" href="MenusMatter.pdf"><img src="Picture1.png"></a>
+                    <p class="description"><b>Menus Matter</b>&nbsp;&nbsp;While working on my capstone class project, I have realized how important a well designed and implemented menu system can be for a game. I wrote an article on this subject of which you can read here. </p>
                 </div>
                </div>
                <div class="portfolio-thumb portfolio-big">
