--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                            <span class="answer">&nbsp;&nbsp;=&gt; ["Design", "Code", "brunch", "typography", "music", "bicycles", "Soccer"]<br/><br/></span>
                            &gt; Abdiasis.workExperience.latest<br/>
                            <span class="answer">&nbsp;&nbsp;=&gt; Latest Work Experience<br/>
-                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; company: "EDMO inc."<br/>
-                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; role: "Front-end Developer"<br/>
-                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; startDate: "June 2020"<br/>
-                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; endDate: "August 2020"<br/>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; company: "Companion Coding"<br/>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; role: "Co-Founder"<br/>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; startDate: "June 2018"<br/>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; endDate: "January 2021"<br/>
                            <br/></span>
                            &gt; Abdiasis.resume<br/>
                            <span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="Resume.pdf">resume.pdf</a>"<br/><br/></span>
@@ -123,7 +123,20 @@
                <!-- Resume : Work Experience -->
                <p class="section-tagline" style="text-align:left;">Work Experience</p>
 
-               <!-- Resume : Work Experience : Revature -->
+                <!-- Resume : Work Experience : Coding Companion -->
+                <p></p>
+                <a target="_blank" href=""><img class="icon" src="companions.jpeg"></a><b>Companion Coding</b>
+                <span class="right"><i>Jun 2018 - Jan 2021</i></span><br/>
+                <b>Co-Founder</b>
+                <span class="right"><i>Tukwila, WA</i></span><br/><br/>
+                 <li>Led coding classes for over 40 underserved teens in the Seattle community, empowering students to pursue Computer Science </li>
+                 <li>Hosted weekly coding and youth development classes to under privileged youth in South Seattle</li>
+                 <li>Led over 50 lectures on resume building, college apps, & job application to youth, resulting in over 30+ internship offers</li>
+                <br/><br/>
+                <span class="skill">HTML/CSS</span><span class="skill">MS Power BI</span><span class="skill">VISIO</span><span class="skill">MS Excel</span><span class="skill">WordPress</span><span class="skill">GitHub</span><span class="skill design">Illustrator</span>
+            </p>
+            <br/>
+               <!-- Resume : Work Experience : Edmo -->
                <p></p>
                    <a target="_blank" href="https://www.edmo.com/"><img class="icon" src="Edmo.jpeg"></a><b>EDMO inc</b>
                    <span class="right"><i>Summer 2020</i></span><br/>
@@ -136,20 +149,20 @@
                    <span class="skill">HTML</span><span class="skill">SASS/CSS</span><span class="skill">React.JS</span><span class="skill">PHP</span><span class="skill">WordPress</span><span class="skill">Git</span><span class="skill design">Illustrator</span><span class="skill design">Photoshop</span>
                </p>
                <br/>
+               
                <!-- Résumé : Work Experience : Microsoft -->
                <p>
                    <a target="_blank" href="https://www.microsoft.com/en-us/legal/intellectualproperty/trademarks"><img class="icon" src="soft.jpeg"></a><b>Microsoft</b>
-                   <span class="right"><i>March 2019 - September 2019</i></span><br/>
+                   <span class="right"><i>March 2018 - September 2018</i></span><br/>
                    <b>Engineering Program Managers Intern</b>
                    <span class="right"><i>Issaquah, WA</i></span><br/><br/>
-                       <li>Rebuilt a Quality Control product with input from 20 cross-functional stakeholders, saving $1M annually</li>
-                       <li>Spearheaded front-end development on Auction PRO application for SharePoint and Shipped the new feature to 180k
-                        users to improve experience for selling products inside an organization</li>
-                       <li>Created 6+ project plans and backlogs while collaborating with Program managers that established development
-                        priorities for each release</li>
-                       <li>Lead product development of a new lab workflow tool, leading to a 40% increase in efficiency; shadowed 10 core users, iterated on design docs, and implemented the solution with two engineers</li>
+                       <li>Spearheaded front-end development on Auction PRO application for SharePoint and Shipped the new feature to 180k users to improve experience for selling products inside an organization</li>
+                       <li>Applied Agile practices including daily scrum meetings and 2-weeks sprints for iterations that were documents in Jira</li>
+                       <li>Translated business requirements to technical requirements that are ready for execution by Engineering team</li>
+                       <li>Provided hands on program management during analysis, design, development, testing, implementation/deployment, and monitoring stages
+                    </li>
                        <br/><br/>
-                   <span class="skill">HTML</span><span class="skill">CSS</span><span class="skill">PHP</span><span class="skill">MySQL</span><span class="skill">Bootstrap</span><span class="skill">User Stories, Product Roadmap</span><span class="skill">Scrum Master Certification</span>
+                   <span class="skill">HTML</span><span class="skill">CSS</span><span class="skill">MySQL</span><span class="skill">User Stories, Product Roadmap</span><span class="skill">Agile & Scrum</span>
                </p>
 
                <br/><br/><br/><br/>
@@ -178,11 +191,11 @@
                <div class="row">
                 <div class="portfolio-thumb">
                     <a class="image-popup-no-margins"><img src="TA.png"></a>
-                    <p class="description"><b>Teachers Assistant Sorting Algorithm</b>&nbsp;&nbsp;Our senior software design capstone project was driven by students common dissatisfaction with the way the Teachers Assistance were chosen.  We want to create a tool for the student to be able to have a fair and just chance of being selected for TA role based on requirements such as graduation year, courses taken and availability. </p>
+                    <p class="description"><b>Teachers Assistant Sorting Algorithm</b>&nbsp;&nbsp; My senior software design capstone project was driven by students common dissatisfaction with the way the Teachers Assistance were chosen.  We want to create a tool for the student to be able to have a fair and just chance of being selected for TA role based on requirements such as graduation year, courses taken and availability. </p>
                 </div>
                    <div class="portfolio-thumb">
                     <a class="image-popup-no-margins" href="MenusMatter.pdf"><img src="Picture1.png"></a>
-                    <p class="description"><b>Menus Matter</b>&nbsp;&nbsp;While working on my capstone class project, I have realized how important a well designed and implemented menu system can be for a game. I wrote an article on this subject of which you can read here. </p>
+                    <p class="description"><b>Menus Matter</b>&nbsp;&nbsp;While working on a personal game project, I realized how important a well designed and implemented menu system can be for a game. I wrote an article on this subject of which you can read here. </p>
                 </div>
                </div>
                <div class="portfolio-thumb portfolio-big">
