--- a/index.html
+++ b/index.html
@@ -135,25 +135,12 @@
                 <br/><br/>
                 <span class="skill">HTML/CSS</span><span class="skill">MS Power BI</span><span class="skill">VISIO</span><span class="skill">MS Excel</span><span class="skill">WordPress</span><span class="skill">GitHub</span><span class="skill design">Illustrator</span>
             </p>
-            <br/>
-               <!-- Resume : Work Experience : Edmo -->
-               <p></p>
-                   <a target="_blank" href="https://www.edmo.com/"><img class="icon" src="Edmo.jpeg"></a><b>EDMO inc</b>
-                   <span class="right"><i>Summer 2020</i></span><br/>
-                   <b>Front-end Web Developer</b>
-                   <span class="right"><i>Yakima, WA</i></span><br/><br/>
-                    <li>As a front-end web developer my work included the design, implementation, testing, and optimization of websites </li>
-                    <li>Improved the end-to-end experience of Revature by conducting usability reviews, identifying UX issues, and proposing design recommendations</li>
-                    <li>Ensured platform-wide consistency through documentation of user cases and UI elements</li>
-                   <br/><br/>
-                   <span class="skill">HTML</span><span class="skill">SASS/CSS</span><span class="skill">React.JS</span><span class="skill">PHP</span><span class="skill">WordPress</span><span class="skill">Git</span><span class="skill design">Illustrator</span><span class="skill design">Photoshop</span>
-               </p>
-               <br/>
+           
                
                <!-- Résumé : Work Experience : Microsoft -->
                <p>
                    <a target="_blank" href="https://www.microsoft.com/en-us/legal/intellectualproperty/trademarks"><img class="icon" src="soft.jpeg"></a><b>Microsoft</b>
-                   <span class="right"><i>March 2018 - September 2018</i></span><br/>
+                   <span class="right"><i>March 2020 - September 2020</i></span><br/>
                    <b>Engineering Program Managers Intern</b>
                    <span class="right"><i>Issaquah, WA</i></span><br/><br/>
                        <li>Spearheaded front-end development on Auction PRO application for SharePoint and Shipped the new feature to 180k users to improve experience for selling products inside an organization</li>
@@ -179,7 +166,7 @@
                </div>
                <div class="row">
                 <div class="portfolio-thumb">
-                    <a class="image-popup-no-margins" ></a><img src="https://images.unsplash.com/photo-1648169747806-6e63fe012439?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Mnx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60"></a>
+                    <a class="image-popup-no-margins" ></a><img src="IMG_6433.jpeg"></a>
                     <p class="description"><b>Internship</b>&nbsp;&nbsp; Internship Team 
                     </p>
                 </div>
